fix overflow

--- a/src/app/nasa/nasa.component.css
+++ b/src/app/nasa/nasa.component.css
@@ -10,6 +10,7 @@
 }
 
 .det {
+  overflow-y: scroll;
   margin-top: 3em;
 }
 
